[package]
name = "instax_pal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluez-async = "0.7.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
uuid = "1.7.0"
futures = "0.3.30"
