[package]
name = "instax_pal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.6"
futures-lite = "2.2.0"
num-traits = "0.2.18"
num-derive = "0.4.2"
chrono = "0.4.37"
